# stateless-py

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs-pages.yml  python-ci.yml
docs/: architecture.md  architecture.mmd  development.md  index.md  parity.md
docs/examples/: 01-simple-phone-call.md  02-bug-tracker.md  03-async-actions.md  04-ignore-reentry.md  05-on-off.md  06-alarm-asyncio.md  07-json-serialization.md  08-advanced-features.md  index.md
docs/getting-started/: installation.md  quickstart.md
docs/guide/: actions.md  advanced-transitions.md  async.md  configuration.md  core-concepts.md  external-state.md  guards.md  hierarchy.md  triggering-and-queries.md
docs/introspection/: graphs.md  overview.md
docs/reference/: errors-and-modes.md  index.md  reflection-models.md  state-configuration.md  state-machine.md  transition.md
examples/: 01_simple_phone_call.py  02_bug_tracker.py  03_async_actions.py  04_ignore_reentry.py  05_on_off.py  06_alarm_asyncio.py  07_json_serialization.py  08_advanced_features.py  EXAMPLES_OVERVIEW.md
src/stateless/: __init__.py  actions.py  exceptions.py  firing_modes.py  graph.py  guards.py  reflection.py  state_configuration.py  state_machine.py  state_representation.py  transition.py  trigger_behaviour.py  trigger_parameterization.py
tests/: conftest.py  test_actions.py  test_async.py  test_dynamic.py  test_firing_mode.py  test_graph.py  test_guards.py  test_ignore.py  test_internal_transition.py  test_introspection.py  test_parameters.py  test_reentry.py  test_state_machine.py  test_substates.py  test_triggers.py
