# stateless-py/pyproject.toml
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stateless-py"
version = "0.1.0"
description = "A simple library for creating state machines in Python code"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Altaher Emhemed", email = "taherassaid@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
    "pydantic",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
    "mypy",
    "pre-commit"
]
# Optional dependency for graphviz dot executable rendering, not required by the library itself
graphing = [
     "graphviz"
]


[project.urls]
Homepage = "https://github.com/alti3/stateless-py"
Repository = "https://github.com/alti3/stateless-py"

[tool.hatch.version]
path = "src/stateless/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
]

[tool.hatch.build.targets.wheel]
packages = ["src/stateless"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = [
    "tests",
]
asyncio_mode="auto" # For pytest-asyncio

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = false
disallow_untyped_defs = true # Enforce type hints on all function definitions
# check_untyped_defs = true # Less relevant if disallow_untyped_defs is True
# Consider enabling stricter checks below later:
# disallow_untyped_calls = true
# warn_redundant_casts = true
# warn_unused_ignores = true
# strict = True # Enable for full strictness when ready
show_error_codes = true
pretty = true
# Specify paths for mypy to check
files = ["src/stateless", "tests"] 
