# --- Hatchling-specific configuration ---
[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[project]
name = "stateless-py"
version = "0.1.0"
description = "A simple library for creating state machines in Python code"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Altaher Emhemed", email = "taherassaid@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
    "pydantic",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
    "pre-commit",
    "ty",
]
# Optional dependency for graphviz dot executable rendering, not required by the library itself
graphing = [
     "graphviz"
]


[project.urls]
Homepage = "https://github.com/alti3/stateless-py"
Repository = "https://github.com/alti3/stateless-py"

[tool.uv.build-backend]
module-root = "src"
module-name = "stateless"

[tool.hatch.build]
packages = ["src/stateless"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = [
    "tests",
]
asyncio_mode="auto" # For pytest-asyncio

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ty.environment]
python-version = "3.10"
root = ["./src", "./tests"]

[tool.ty.src]
include = ["src", "tests"]
