[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[project]
name = "stateless-py"
version = "0.1.0"
description = "A simple library for creating state machines in Python code"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "Altaher Emhemed", email = "taherassaid@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10,<3.15"
dependencies = [
    "pydantic",
    "ruff>=0.15.15",
    "ty>=0.0.40",
]

[project.optional-dependencies]
graphing = [
    "graphviz",
]


[project.urls]
Homepage = "https://github.com/alti3/stateless-py"
Repository = "https://github.com/alti3/stateless-py"

[tool.uv.build-backend]
module-root = "src"
module-name = "stateless"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = [
    "tests",
]
asyncio_mode = "auto"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ty.environment]
python-version = "3.10"
root = ["./src", "./tests"]

[tool.ty.src]
include = ["src", "tests"]

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "mkdocstrings[python]>=1.0.3",
    "pre-commit>=4.3.0",
    "pymdown-extensions>=10.20.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.13.0",
    "ty>=0.0.1a20",
]
